--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,8 @@ android {
         versionName rootProject.ext.android.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -56,6 +58,9 @@ dependencies {
     implementation 'cn.bingoogolapple:bga-banner:2.1.8@aar'
     //Logger
     implementation 'com.orhanobut:logger:2.1.1'
+    //AgentWeb
+    implementation 'com.just.agentweb:agentweb:3.1.0'
+    compile 'com.android.support:multidex:1.0.0'
 
     //腾讯 bugly
     //implementation 'com.tencent.bugly:crashreport:2.6.6.1'
