--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.ContentActivity"></activity>
+        <activity android:name=".ui.activity.ContentActivity" />
+        <activity android:name=".ui.activity.TypeKnowledgeActivity"></activity>
     </application>
 
 </manifest>
