--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.ContentActivity" />
-        <activity android:name=".ui.activity.TypeKnowledgeActivity"></activity>
+        <activity android:name=".ui.activity.KnowledgeActivity"></activity>
     </application>
 
 </manifest>
