--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,6 @@ dependencies {
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
     // BaseRecyclerViewAdapterHelper
     implementation "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.35"
-    // SmartRefreshLayout
-    // implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-5'
-    // implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-5'
     //Banner
     implementation 'com.android.support:support-v4:2.2.4'
     implementation 'cn.bingoogolapple:bga-banner:2.2.4@aar'
@@ -66,7 +63,7 @@ dependencies {
     // VerticalTabLayout
     implementation 'q.rorbin:VerticalTabLayout:1.2.5'
     // Flowlayout
-    compile 'com.hyman:flowlayout-lib:1.1.2'
+    implementation 'com.hyman:flowlayout-lib:1.1.2'
 
     //腾讯 bugly
     //implementation 'com.tencent.bugly:crashreport:2.6.6.1'
