--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation 'q.rorbin:VerticalTabLayout:1.2.5'
     // Flowlayout
     implementation 'com.hyman:flowlayout-lib:1.1.2'
+    // EventBus
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
     //腾讯 bugly
     //implementation 'com.tencent.bugly:crashreport:2.6.6.1'
