--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     //implementation 'com.tencent.bugly:crashreport:2.6.6.1'
 
     implementation 'com.cxz.swipebacklibrary:swipeback:1.0.0'
+    // MD dialog
+    implementation 'com.afollestad.material-dialogs:commons:0.9.4.4'
 }
