--- a/.travis.yml
+++ b/.travis.yml
@@ -10,20 +10,20 @@ android:
   - extra-android-m2repository
   - extra-android-support
   licenses:
-    - 'android-sdk-preview-license-52d11cd2'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
+  - android-sdk-preview-license-52d11cd2
+  - android-sdk-license-.+
+  - google-gdk-license-.+
 before_cache:
 - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
   directories:
   - "$HOME/.gradle/caches/"
   - "$HOME/.gradle/wrapper/"
-  - $HOME/.android/build-cache
+  - "$HOME/.android/build-cache"
 before_install:
 - gem install fir-cli
 - yes | sdkmanager "platforms;android-27"
-- openssl aes-256-cbc -K $encrypted_e0de0de21454_key -iv $encrypted_e0de0de21454_iv
+- openssl aes-256-cbc -K $encrypted_5c3ae9008f8a_key -iv $encrypted_5c3ae9008f8a_iv
   -in cxz.jks.enc -out cxz.jks -d
 - rm -f gradle.properties
 - chmod +x gradlew
