--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ cache:
   - "$HOME/.android/build-cache"
 before_install:
 - gem install fir-cli
+- sdkmanager --update && yes | sdkmanager --licenses
 - yes | sdkmanager "platforms;android-27"
 - openssl aes-256-cbc -K $encrypted_5c3ae9008f8a_key -iv $encrypted_5c3ae9008f8a_iv
   -in cxz.jks.enc -out cxz.jks -d
