--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,14 @@ android {
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
+
+    dexOptions {
+        dexInProcess true
+        preDexLibraries true
+        javaMaxHeapSize "4g"
+        // incremental true
+    }
+
     compileOptions {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
