--- a/config.gradle
+++ b/config.gradle
@@ -64,7 +64,8 @@ ext {
             "vertical-tablayout": 'q.rorbin:VerticalTabLayout:1.2.5',
             "flow-layout"       : 'com.hyman:flowlayout-lib:1.1.2',
             "eventbus"          : 'org.greenrobot:eventbus:3.1.1',
-            "bugly"             : 'com.tencent.bugly:crashreport:2.6.6.1',
+            //"bugly"           : 'com.tencent.bugly:crashreport:2.6.6.1',
+            "bugly-crash-up"    : 'com.tencent.bugly:crashreport_upgrade:1.3.5',
             "swipeback"         : 'com.cxz.swipebacklibrary:swipeback:1.0.0',
             "material-dialogs"  : 'com.afollestad.material-dialogs:commons:0.9.4.4',
             "logger"            : 'com.orhanobut:logger:2.1.1',
