--- a/config.gradle
+++ b/config.gradle
@@ -61,7 +61,7 @@ ext {
             "banner"            : 'cn.bingoogolapple:bga-banner:2.2.4@aar',
             "agentweb"          : 'com.just.agentweb:agentweb:3.1.0',
             "multidex"          : 'com.android.support:multidex:1.0.3',
-            "vertical-tablayout": 'q.rorbin:VerticalTabLayout:1.2.5',
+            //"vertical-tablayout": 'q.rorbin:VerticalTabLayout:1.2.5',
             "flow-layout"       : 'com.hyman:flowlayout-lib:1.1.2',
             "eventbus"          : 'org.greenrobot:eventbus:3.1.1',
             //"bugly"           : 'com.tencent.bugly:crashreport:2.6.6.1',
