--- a/config.gradle
+++ b/config.gradle
@@ -66,7 +66,7 @@ ext {
             "eventbus"          : 'org.greenrobot:eventbus:3.1.1',
             //"bugly"           : 'com.tencent.bugly:crashreport:2.6.6.1',
             "bugly-crash-up"    : 'com.tencent.bugly:crashreport_upgrade:1.3.5',
-            "swipeback"         : 'com.cxz.swipebacklibrary:swipeback:1.0.0',
+            "swipeback"         : 'com.cxz:swipeback:1.0.1',
             "material-dialogs"  : 'com.afollestad.material-dialogs:commons:0.9.4.4',
             "logger"            : 'com.orhanobut:logger:2.1.1',
             "litepal"           : 'org.litepal.android:core:2.0.0'
