--- a/config.gradle
+++ b/config.gradle
@@ -56,20 +56,21 @@ ext {
     ]
 
     commonDeps = [
-            "glide"             : "com.github.bumptech.glide:glide:${dependVersion.glideSdkVersion}",
-            "brvh"              : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.35',
-            "banner"            : 'cn.bingoogolapple:bga-banner:2.2.4@aar',
-            "agentweb"          : 'com.just.agentweb:agentweb:3.1.0',
-            "multidex"          : 'com.android.support:multidex:1.0.3',
+            "glide"           : "com.github.bumptech.glide:glide:${dependVersion.glideSdkVersion}",
+            "brvh"            : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.35',
+            "banner"          : 'cn.bingoogolapple:bga-banner:2.2.4@aar',
+            "agentweb"        : 'com.just.agentweb:agentweb:3.1.0',
+            "multidex"        : 'com.android.support:multidex:1.0.3',
             //"vertical-tablayout": 'q.rorbin:VerticalTabLayout:1.2.5',
-            "flow-layout"       : 'com.hyman:flowlayout-lib:1.1.2',
-            "eventbus"          : 'org.greenrobot:eventbus:3.1.1',
+            "flow-layout"     : 'com.hyman:flowlayout-lib:1.1.2',
+            "eventbus"        : 'org.greenrobot:eventbus:3.1.1',
             //"bugly"           : 'com.tencent.bugly:crashreport:2.6.6.1',
-            "bugly-crash-up"    : 'com.tencent.bugly:crashreport_upgrade:1.3.5',
-            "swipeback"         : 'com.cxz:swipeback:1.0.1',
-            "material-dialogs"  : 'com.afollestad.material-dialogs:commons:0.9.4.4',
-            "logger"            : 'com.orhanobut:logger:2.1.1',
-            "litepal"           : 'org.litepal.android:core:2.0.0'
+            "bugly-crash-up"  : 'com.tencent.bugly:crashreport_upgrade:1.3.5',
+            "swipeback"       : 'com.cxz:swipeback:1.0.1',
+            "material-dialogs": 'com.afollestad.material-dialogs:commons:0.9.4.4',
+            "logger"          : 'com.orhanobut:logger:2.1.1',
+            "litepal"         : 'org.litepal.android:core:2.0.0',
+            "fab"             : 'com.github.clans:fab:1.6.4'
     ]
 
     otherDeps = [
