--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="360" />
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="640" />
+
         <activity
             android:name=".ui.activity.SplashActivity"
             android:theme="@style/SplashTheme">
@@ -65,7 +73,7 @@
 
         <receiver android:name=".receiver.NetworkChangeReceiver" />
 
-        <activity android:name=".ui.activity.TodoActivity"/>
+        <activity android:name=".ui.activity.TodoActivity" />
     </application>
 
 </manifest>
