--- a/config.gradle
+++ b/config.gradle
@@ -72,7 +72,8 @@ ext {
             "logger"                : 'com.orhanobut:logger:2.1.1',
             "litepal"               : 'org.litepal.android:core:2.0.0',
             "fab"                   : 'com.github.clans:fab:1.6.4',
-            "materialdatetimepicker": 'com.wdullaer:materialdatetimepicker:3.6.3'
+            "materialdatetimepicker": 'com.wdullaer:materialdatetimepicker:3.6.3',
+            "android-autosize"      : 'me.jessyan:autosize:0.7.0'
     ]
 
     otherDeps = [
