--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ apply from :"config.gradle"
 buildscript {
     ext.kotlin_version = '1.2.30'
     repositories {
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        // maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         google()
         jcenter()
-        mavenCentral()
+        // mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
@@ -20,7 +20,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        // maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         google()
         jcenter()
         maven {
