--- a/config.gradle
+++ b/config.gradle
@@ -24,8 +24,9 @@ ext {
             "appcompatv7"      : "com.android.support:appcompat-v7:${dependVersion.androidSupportSdkVersion}",
             "cardview"         : "com.android.support:cardview-v7:${dependVersion.androidSupportSdkVersion}",
             "design"           : "com.android.support:design:${dependVersion.androidSupportSdkVersion}",
-            "constraint-layout": "com.android.support.constraint:constraint-layout:1.1.2",
-            "annotations"      : "com.android.support:support-annotations:${dependVersion.androidSupportSdkVersion}"
+            "constraint-layout": "com.android.support.constraint:constraint-layout:1.1.3",
+            "annotations"      : "com.android.support:support-annotations:${dependVersion.androidSupportSdkVersion}",
+            "vector-drawable"  : "com.android.support:support-vector-drawable:${dependVersion.androidSupportSdkVersion}"
     ]
 
     retrofit = [
@@ -73,7 +74,7 @@ ext {
             "litepal"               : 'org.litepal.android:core:2.0.0',
             "fab"                   : 'com.github.clans:fab:1.6.4',
             "materialdatetimepicker": 'com.wdullaer:materialdatetimepicker:3.6.4',
-            "android-autosize"      : 'me.jessyan:autosize:1.0.5'
+            "android-autosize"      : 'me.jessyan:autosize:1.1.0'
     ]
 
     otherDeps = [
