--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ static def releaseTime() {
 }
 
 dependencies {
-    // implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     configurations {
         all*.exclude group: 'com.android.support', module: 'support-v13'
