--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,12 +48,8 @@
             android:launchMode="singleTask" />
         <activity android:name=".ui.activity.ContentActivity" />
         <activity android:name=".ui.activity.KnowledgeActivity" />
-        <activity
-            android:name=".ui.activity.LoginActivity"
-            android:theme="@style/AppTheme.FullScreen" />
-        <activity
-            android:name=".ui.activity.RegisterActivity"
-            android:theme="@style/AppTheme.FullScreen" />
+        <activity android:name=".ui.activity.LoginActivity" />
+        <activity android:name=".ui.activity.RegisterActivity" />
         <activity android:name=".ui.activity.CommonActivity" />
         <activity android:name=".ui.setting.SettingActivity" />
         <activity android:name=".ui.activity.SearchActivity" />
