增加我的积分功能，显示等级、排名等，修改已知问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         <receiver android:name=".receiver.NetworkChangeReceiver" />
 
         <activity android:name=".ui.activity.TodoActivity" />
+        <activity android:name=".ui.activity.ScoreActivity" />
     </application>
 
 </manifest>
