--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,7 @@
 
         <activity android:name=".ui.activity.TodoActivity" />
         <activity android:name=".ui.activity.ScoreActivity" />
+        <activity android:name=".ui.activity.RankActivity" />
     </application>
 
 </manifest>
