集成 tinker 热更新

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 // apply plugin: 'kotlin-kapt'
 
+// 依赖 tinker 插件脚本
+apply from: 'tinker-support.gradle'
+
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
