--- a/config.gradle
+++ b/config.gradle
@@ -66,8 +66,11 @@ ext {
             //"vertical-tablayout": 'q.rorbin:VerticalTabLayout:1.2.5',
             "flow-layout"           : 'com.hyman:flowlayout-lib:1.1.2',
             "eventbus"              : 'org.greenrobot:eventbus:3.1.1',
-            //"bugly"           : 'com.tencent.bugly:crashreport:2.6.6.1',
-            "bugly-crash-up"        : 'com.tencent.bugly:crashreport_upgrade:1.3.5',
+            //"bugly"           : 'com.tencent.bugly:crashreport:3.1.0',
+            "bugly-crash-up"        : 'com.tencent.bugly:crashreport_upgrade:1.4.2',
+            // 指定tinker依赖版本（注：应用升级1.3.5版本起，不再内置tinker）
+            'tinker'                : 'com.tencent.tinker:tinker-android-lib:1.9.14.3',
+            //'nativecrashreport'     : 'com.tencent.bugly:nativecrashreport:3.7.1',//latest.release
             "swipeback"             : 'com.cxz:swipeback:1.0.1',
             "material-dialogs"      : 'com.afollestad.material-dialogs:commons:0.9.4.4',
             "logger"                : 'com.orhanobut:logger:2.1.1',
