--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,6 @@ org.gradle.jvmargs=-Xmx1536m
 kotlin.code.style=official
 
 # Disables R8 for Android Library modules only.
-android.enableR8.libraries = false
+android.enableR8.libraries = true
 # Disables R8 for all modules.
-android.enableR8 = false
+android.enableR8 = true
