--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ kotlin.code.style=official
 android.enableR8.libraries = true
 # Disables R8 for all modules.
 android.enableR8 = true
+android.useAndroidX=true
+android.enableJetifier=true
