--- a/verticaltablayout/build.gradle
+++ b/verticaltablayout/build.gradle
@@ -24,6 +24,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'q.rorbin:badgeview:1.1.2'
 }
