--- a/config.gradle
+++ b/config.gradle
@@ -9,30 +9,37 @@ ext {
     ]
 
     dependVersion = [
-            androidSupportSdkVersion: "28.0.0",
-            espressoSdkVersion      : "3.0.2",
-            retrofitSdkVersion      : "2.4.0",
-            glideSdkVersion         : "4.8.0",
-            rxJava                  : "2.2.2",
-            rxAndroid               : "2.1.0",
-            rxKotlin                : "2.3.0",
-            anko                    : "0.10.7"
+            // supportSdkVersion: "28.0.0",
+            retrofit : "2.4.0",
+            glide    : "4.12.0",
+            rxJava   : "2.2.2",
+            rxAndroid: "2.1.0",
+            rxKotlin : "2.3.0",
+            anko     : "0.10.7"
     ]
 
-    supportDeps = [
-            "supportv4"        : "com.android.support:support-v4:${dependVersion.androidSupportSdkVersion}",
-            "appcompatv7"      : "com.android.support:appcompat-v7:${dependVersion.androidSupportSdkVersion}",
-            "cardview"         : "com.android.support:cardview-v7:${dependVersion.androidSupportSdkVersion}",
-            "design"           : "com.android.support:design:${dependVersion.androidSupportSdkVersion}",
-            "constraint-layout": "com.android.support.constraint:constraint-layout:1.1.3",
-            "annotations"      : "com.android.support:support-annotations:${dependVersion.androidSupportSdkVersion}",
-            "vector-drawable"  : "com.android.support:support-vector-drawable:${dependVersion.androidSupportSdkVersion}"
+    androidxDeps = [
+            "appcompat"       : 'androidx.appcompat:appcompat:1.2.0',
+            "material"        : 'com.google.android.material:material:1.2.1',
+            "constraintlayout": 'androidx.constraintlayout:constraintlayout:2.0.4',
+            "androidx-core"   : 'androidx.core:core-ktx:1.3.2',
+            "recyclerview"    : "androidx.recyclerview:recyclerview:1.2.0",
     ]
+
+//    supportDeps = [
+//            "supportv4"        : "com.android.support:support-v4:${dependVersion.supportSdkVersion}",
+//            "appcompatv7"      : "com.android.support:appcompat-v7:${dependVersion.supportSdkVersion}",
+//            "cardview"         : "com.android.support:cardview-v7:${dependVersion.supportSdkVersion}",
+//            "design"           : "com.android.support:design:${dependVersion.supportSdkVersion}",
+//            "constraint-layout": "com.android.support.constraint:constraint-layout:1.1.3",
+//            "annotations"      : "com.android.support:support-annotations:${dependVersion.supportSdkVersion}",
+//            "vector-drawable"  : "com.android.support:support-vector-drawable:${dependVersion.supportSdkVersion}"
+//    ]
 
     retrofit = [
-            "retrofit"                : "com.squareup.retrofit2:retrofit:${dependVersion.retrofitSdkVersion}",
-            "retrofitConverterGson"   : "com.squareup.retrofit2:converter-gson:${dependVersion.retrofitSdkVersion}",
-            "retrofitAdapterRxjava2"  : "com.squareup.retrofit2:adapter-rxjava2:${dependVersion.retrofitSdkVersion}",
+            "retrofit"                : "com.squareup.retrofit2:retrofit:${dependVersion.retrofit}",
+            "retrofitConverterGson"   : "com.squareup.retrofit2:converter-gson:${dependVersion.retrofit}",
+            "retrofitAdapterRxjava2"  : "com.squareup.retrofit2:adapter-rxjava2:${dependVersion.retrofit}",
             "okhttp3LoggerInterceptor": 'com.squareup.okhttp3:logging-interceptor:3.11.0',
             "retrofitConverterMoshi"  : 'com.squareup.retrofit2:converter-moshi:2.4.0',
             "retrofitKotlinMoshi"     : "com.squareup.moshi:moshi-kotlin:1.7.0"
@@ -47,10 +54,8 @@ ext {
 
     testDeps = [
             "junit"                    : 'junit:junit:4.12',
-            "runner"                   : 'com.android.support.test:runner:1.0.2',
-            "espresso-core"            : "com.android.support.test.espresso:espresso-core:${dependVersion.espressoSdkVersion}",
-            "espresso-contrib"         : "com.android.support.test.espresso:espresso-contrib:${dependVersion.espressoSdkVersion}",
-            "espresso-intents"         : "com.android.support.test.espresso:espresso-intents:${dependVersion.espressoSdkVersion}",
+            "runner"                   : 'androidx.test.ext:junit:1.1.1',
+            "espresso-core"            : 'androidx.test.espresso:espresso-core:3.1.0',
             "leakcanary-debug"         : 'com.squareup.leakcanary:leakcanary-android:1.6.1',
             "leakcanary-release"       : 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.1',
             "leakcanary-debug-fragment": 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.1',
@@ -58,11 +63,11 @@ ext {
     ]
 
     commonDeps = [
-            "glide"                 : "com.github.bumptech.glide:glide:${dependVersion.glideSdkVersion}",
+            "glide"                 : "com.github.bumptech.glide:glide:${dependVersion.glide}",
             "brvh"                  : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.35',
             "banner"                : 'cn.bingoogolapple:bga-banner:2.2.4@aar',
             "agentweb"              : 'com.just.agentweb:agentweb:4.0.2',
-            "multidex"              : 'com.android.support:multidex:1.0.3',
+            "multidex"              : 'com.android.support:multidex:2.0.1',
             //"vertical-tablayout": 'q.rorbin:VerticalTabLayout:1.2.5',
             "flow-layout"           : 'com.hyman:flowlayout-lib:1.1.2',
             "eventbus"              : 'org.greenrobot:eventbus:3.1.1',
@@ -82,15 +87,16 @@ ext {
     ]
 
     otherDeps = [
-            "glideCompiler": "com.github.bumptech.glide:compiler:${dependVersion.glideSdkVersion}",
-            "glideOkhttp"  : "com.github.bumptech.glide:okhttp3-integration:${dependVersion.glideSdkVersion}"
+            "glide-compiler": "com.github.bumptech.glide:compiler:${dependVersion.glide}",
+            "glideOkhttp"   : "com.github.bumptech.glide:okhttp3-integration:${dependVersion.glide}"
     ]
 
-    supportLibs = supportDeps.values()
+    // supportLibs = supportDeps.values()
+    androisxLibs = androidxDeps.values()
     networkLibs = retrofit.values()
     rxJavaLibs = rxJava.values()
     commonLibs = commonDeps.values()
 
-    annotationProcessorLibs = [otherDeps["glideCompiler"]]
+    annotationProcessorLibs = [otherDeps["glide-compiler"]]
 
 }
