--- a/config.gradle
+++ b/config.gradle
@@ -86,9 +86,8 @@ ext {
             "spinkit"               : 'com.github.ybq:Android-SpinKit:1.2.0'
     ]
 
-    otherDeps = [
-            "glide-compiler": "com.github.bumptech.glide:compiler:${dependVersion.glide}",
-            "glideOkhttp"   : "com.github.bumptech.glide:okhttp3-integration:${dependVersion.glide}"
+    annotationProcessorDeps = [
+            "glide-compiler": "com.github.bumptech.glide:compiler:${dependVersion.glide}"
     ]
 
     // supportLibs = supportDeps.values()
@@ -96,7 +95,6 @@ ext {
     networkLibs = retrofit.values()
     rxJavaLibs = rxJava.values()
     commonLibs = commonDeps.values()
-
-    annotationProcessorLibs = [otherDeps["glide-compiler"]]
+    annotationProcessorLibs = annotationProcessorDeps.values()
 
 }
